--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ build-backend = "scikit_build_core.build"
 
 [project]
 name = "RapidFuzz"
-dynamic = ["version"]
+version = "3.10.0"
 requires-python = ">= 3.9"
 authors = [
   {name = "Max Bachmann", email = "pypi@maxbachmann.de"},
@@ -23,11 +23,6 @@ classifiers=[
   "Programming Language :: Python :: 3.13",
   "License :: OSI Approved :: MIT License",
 ]
-Homepage = "https://github.com/rapidfuzz/RapidFuzz"
-Documentation = "https://rapidfuzz.github.io/RapidFuzz/"
-Repository = "https://github.com/rapidfuzz/RapidFuzz.git"
-Issues = "https://github.com/rapidfuzz/RapidFuzz/issues"
-Changelog = "https://github.com/rapidfuzz/RapidFuzz/blob/main/CHANGELOG.rst"
 
 [project.optional-dependencies]
 all = [
